@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
-    <height>354</height>
+    <width>535</width>
+    <height>352</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>winetricks plugin</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" rowspan="3">
+   <item row="0" column="0" rowspan="5">
     <widget class="QListWidget" name="lstMain">
      <property name="toolTip">
       <string/>
@@ -31,14 +31,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QPushButton" name="cmdExit">
-     <property name="text">
-      <string>Exit</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
+   <item row="5" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>Click on item to show help here</string>
@@ -48,10 +41,24 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="5" column="1">
     <widget class="QPushButton" name="cmdInstWinetricks">
      <property name="text">
       <string>Install Winetricks</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="cmdExit">
+     <property name="text">
+      <string>Exit</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QPushButton" name="cmdRefresh">
+     <property name="text">
+      <string>Refresh list</string>
      </property>
     </widget>
    </item>
