@@ -9,6 +9,8 @@ Version 0.119-r2
  Added:
   - Czech translation (thx to Pavel Fric)
   - Added cmake option MANPAGE_ENTRY_PATH;
+  - User now can open system terminal from q4wine programs tab menu for selected dir;
+  - Winetriks plugin updates;
 
  Fixed:
   - warning: ignoring return value of ‘int chdir(const char*)’, declared with attribute warn_unused_result;
